修改表名称。把logout和refreshtoken放user下。因为他们也是要由token的
